tests/integration/snapshots/integration__conformance__n_structure_unclosed_array_unfinished_true.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[ false, tru
stdout ---

stderr ---
error: unexpected character `t`. expected start of a json value
 --> stdin:1:10
  |
1 | [ false, tru
  |          ^
