tests/integration/snapshots/integration__conformance__n_structure_unicode-identifier.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
å
stdout ---

stderr ---
error: unexpected character `å`. expected start of a json value
 --> stdin:1:1
  |
1 | å
  | ^
